create dto totree